# blackJack1

./: CMakeLists.txt  GameView.qml  HandView.qml  Main.qml  card.cpp  card.h  controlerblackjack.cpp  controlerblackjack.h  dealer.cpp  dealer.h  deck.cpp  deck.h  gambler.cpp  gambler.h  hand.cpp  hand.h  main.cpp  player.cpp  player.h  resIcon.qrc  resSkinFront.qrc  resSound.qrc  skin.cpp  sound.cpp  sound.h
